@@ -4,9 +4,11 @@ project (DAnCE_Error_Interceptors) : dance_skel, dance_lib, dance_output, dance_
 
    Source_Files {
      Standard_Error.cpp
+     Best_Effort.cpp
    }
 
    Header_Files {
      Standard_Error.h  
+     Best_Effort.h  
    }
 }
