@@ -1,3 +1,14 @@
+Mon Jun 28 02:24:44 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/DAnCE/DAnCE_Utility.h:
+        * DAnCE/DAnCE/DAnCE_Utility.tpp:
+        * DAnCE/DAnCE/DAnCE_Utility.cpp:
+        * DAnCE/LocalityManager/Interceptors/Best_Effort.h:
+        * DAnCE/LocalityManager/Interceptors/Best_Effort.cpp:
+        * DAnCE/LocalityManager/Interceptors/Error_Interceptors.mpc:
+
+          Added best effort interceptors.  
+
 Sat Jun 26 20:46:09 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/LocalityManager/Scheduler/Events/Endpoint.cpp:
